@@ -1,9 +1,11 @@
-﻿### Note
-This Fork is designed to work with the Milkable Colonists continuation listed on the addons post in the official RJW forum post.
-Below is the readme of the repo this is forked from. It (probably) isn't accurate.
+﻿# Milking Machine
+This fork is designed to work with the [onslort Milkable Colonists continuation](https://www.loverslab.com/topic/139736-milkable-colonists-updated-for-11/page/5/#comment-3925773) listed on [the addons post in the official RJW forum thread](https://www.loverslab.com/topic/110270-mod-rimjobworld/#RJW%20Add-ons).
 
-## Requires RimJobWorld (obviously) and ~~Vanilla Expanded Framework~~
-**Tutorial**
+See also, [the original version this is forked from](https://github.com/ocarina0001/rjw-milking-machine).
+
+## Usage
+(**Some of the following is no longer accurate**)
+
 To begin milking a colonist you'll want to create either a penis milking machine or a breast milking machine, both costing 45 units of any leathery material at a tailoring bench. The penis milking machine produces a variable amount of used condoms / cum if [Sexperience](https://www.loverslab.com/topic/193448-mod-rjw-sexperience-continued/) is active each day. The same is said for a breast milking machine, but instead of cum it's milk. 
 Before you start your new milk farm, you should take note of the following:
  - Size matters
@@ -12,23 +14,17 @@ Before you start your new milk farm, you should take note of the following:
  - The only penises that modify cum output are horse, dog, demon and dragon
  - Each piece of the apparel lowers consciousness and moving by 20%, while increasing hunger rate by 20%
 
-**Known Incompatibilities**
+## Compatability
+### Dependencies
+ - RimJobWorld
+
+### Supported Mods
+ - [RimNude](https://gitgud.io/Tory/rimnude-unofficial)*
+ - [Milkable Colonists (onslort's continuation)](https://www.loverslab.com/topic/139736-milkable-colonists-updated-for-11/page/5/#comment-3925773)
+ - ~~[Milkable Colonists (Mlie's Continuation)](https://steamcommunity.com/sharedfiles/filedetails/?id=2218407878)~~*
+ - [Sexperience](https://www.loverslab.com/topic/193448-mod-rjw-sexperience-continued/)*
+
+\* Untested on this fork 
+
+### Known Incompatibilities
  - None. If you know one make an issue about it
-
-**Supported Mods**
- - [RimNude](https://gitgud.io/Tory/rimnude-unofficial)
- - [Milkable Colonists (Mlie's Continuation)](https://steamcommunity.com/sharedfiles/filedetails/?id=2218407878)
- - [Sexperience](https://www.loverslab.com/topic/193448-mod-rjw-sexperience-continued/)
- 
- **Credits**
-
- - ShauaPuta for helping with code
- - Void Chicken for helping with code 
- - Tory187 for helping with RimNude support
-
-**Roadmap (in order of greatest importance)**
- - [c0ffee's Ideology support](https://gitgud.io/c0ffeeeeeeee/coffees-rjw-ideology-addons)
- - Sex need influences cum amount
- - Hunger decreasing drug with potentially horrible side effects
- - Aphrodisiac drug which increases cum and milk amount
- - Aphrodisiac food which increases cum and milk amount
